# ollama-dashboard

./: .env.example  .gitignore  CAPABILITIES_FIX_SUMMARY.md  CAPABILITY_SYSTEM_OVERHAUL.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER_NOTES.md  FIXES_SUMMARY.md  IMPLEMENTATION_SAFEGUARDS.md  OllamaDashboard.py  QUICK_REFERENCE.sh  README.md  RELEASE_NOTES.md  RESTART_GUIDE.md  TEST_RESULTS.md  chat_history.json  check_delete_buttons.py  history.json.tmp  install.py  model_settings.json  ollama_dashboard.py  ollama_dashboard.py.backup  ollama_dashboard_cli.py  package-lock.json  package.json  patch_capabilities.js  proxy_tests.txt  pyproject.toml  pytest.ini  pytest_output.txt  requirements-dev.txt  requirements.txt  restart_app.bat  restart_app.ps1  saved_parameters.json  server_with_proxy.js  settings.json  start.bat  start_app.bat  start_dev.bat  (+17 more)
.cursor/rules/: app-restart.mdc
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci.yml
.venv312/: pyvenv.cfg
.venv312/Scripts/: activate  activate.bat
StartupFolder/: README.txt  Start Ollama Dashboard.bat
app/: __init__.py  config.py  wsgi_safe.py
app/config/: gunicorn.py
app/routes/: __init__.py  api_proxy.py  main.py  main_chat.py  main_common.py  main_models.py  main_pages.py  main_system.py  monitoring.py  observability.py  proxy.py  proxy_upstream.py
app/services/: __init__.py  alerting.py  ask_agent.py  ask_attachments.py  auth.py  benchmark_improvements.py  benchmark_settings.py  capabilities.py  chat_prep.py  client_payload_compat.py  context_budget.py  contracts.py  copilot_analytics.py  copilot_extras.py  copilot_pipeline.py  copilot_prewarm.py  copilot_proxy.py  distributed_tracing.py  error_handling.py  error_messages.py  fleet_orchestration.py  mcp_server.py  mcp_tools.py  model_advisor.py  model_benchmark.py  model_capability_defaults.json  model_catalog.py  model_fetcher.py  model_helpers.py  model_recommendation_profiles.json  model_recommendation_profiles.py  model_residency.py  model_router.py  model_settings_helpers.py  ollama.py  ollama_core.py  ollama_models.py  ollama_service_control.py  ollama_update_check.py  ollama_utilities.py  (+16 more)
app/static/css/: styles.css  theme.css
app/static/js/: main.js  theme.js  tooltips.js
app/static/js/modules/: api_proxy.js  askHistory.js  askMessageFormat.js  askModal.js  askModalDock.js  bootstrap.js  downloads.js  modelCardActions.js  modelCards.js  notifications.js  polling.js  serviceControl.js  settings.js  utils.js
app/templates/: admin_model_defaults.html  index.html  settings.html
data/: benchmark_tune_history.json  dual_benchmark_results.json  dual_benchmark_results_round2.json  fleet_roles.json  proxy_gain_report.md  pytest-last.txt
docker/: Dockerfile  docker-compose.yml  gunicorn.conf.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  GUIDE.md  SECURITY.md  TROUBLESHOOTING.md  UI.md
scripts/: README.md  apply_benchmark_improvements.py  benchmark_models.py  benchmark_tune_loop.py  capture_dashboard_screenshot.py  check.bat  copilot_smoke_test.py  dashboard-process.ps1  dev.sh  launch-release.ps1  live_agent_proxy_test.py  ollama-dashboard-monitor.ps1  proxy_smoke_test.py  remove-legacy-settings-note.txt  run-release-server.bat  run_dual_benchmark.py  setup_cursor.py  setup_vscode.py  smoke_check.py  start-release-hidden.vbs  start-release.bat  start-with-ollama.bat  start-with-ollama.ps1  start_proxy_takeover.bat
scripts/proxy/: server_with_proxy.js
tests/: api_endpoint_test_output.txt  conftest.py  quick_test.py  test_admin_model_defaults.py  test_api.py  test_api_endpoints.py  test_app_comprehensive.py  test_app_startup.py  test_ask_agent.py  test_ask_attachments.py  test_ask_message_format.js  test_available_models_capabilities.py  test_benchmark_improvements.py  test_bulk_start_models.py  test_capabilities.ps1  test_capabilities_complete.py  test_capabilities_detailed.py  test_capabilities_flags_boolean.py  test_capabilities_pytest.py  test_capabilities_ui.html  test_chat_functionality.js  test_chat_history.py  test_chat_model_settings.py  test_chat_models.js  test_chat_models.py  test_chat_prep.py  test_client_payload_compat.py  test_concurrency_cache.py  test_context_budget.py  test_copilot_extras.py  test_copilot_pipeline.py  test_copilot_prewarm.py  test_copilot_routes.py  test_dashboard_template.py  test_delete_model.py  test_disk.py  test_double_init_app.py  test_downloadable.py  test_endpoint.py  test_error_handling.py  (+50 more)
